--- a/templates/host_list.html
+++ b/templates/host_list.html
@@ -159,14 +159,7 @@
                                         </thead>
                                         <tbody>
                                             <tr>
-                                                <td>1</td>
-                                                <td>Dakota Rice</td>
-                                                <td>$36,738</td>
-                                                <td>Niger</td>
-                                                <td>Oud-Turnhout</td>
-                                            </tr>
-                                            <tr>
-                                                <td>2</td>
+                                                <td>{{host.hostname}}</td>
                                                 <td>Minerva Hooper</td>
                                                 <td>$23,789</td>
                                                 <td>Curaçao</td>
