--- a/templates/host_list.html
+++ b/templates/host_list.html
@@ -147,6 +147,44 @@
                                 <div class="card-header ">
                                     <h4 class="card-title">Striped Table with Hover</h4>
                                     <!-- <p class="card-category">Here is a subtitle for this table</p> -->
+                                    <!-- Button trigger modal -->
+                                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                                        Add Host
+                                        </button>
+                                    <!-- Modal -->
+                                    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                                        <div class="modal-dialog">
+                                            <div class="modal-content">
+                                                 <div class="modal-header">
+                                                 <h5 class="modal-title" id="staticBackdropLabel">Insert Host</h5>
+                                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                                 </div>
+                                            <div class="modal-body">
+                                                <div class="mb-3">
+                                                    <label for="exampleFormControlInput1" class="form-label">New Host IP</label>
+                                                    <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="10.238.152.*">
+                                                </div>
+                                                <div class="mb-3">
+                                                    <label for="exampleFormControlInput2" class="form-label">New Host Owner</label>
+                                                    <input type="text" class="form-control" id="exampleFormControlInput2">
+                                                </div>
+                                                <div class="mb-3">
+                                                    <label for="exampleSelectList" class="form-label">Which Lab</label>
+                                                    <select class="form-control" aria-label="exampleSelectList">
+                                                        <option selected>Open this select menu</option>
+                                                        <option value="18L01">18L01</option>
+                                                        <option value="18L03">18L03</option>
+                                                        <option value="18L06">18L06</option>
+                                                        </select>
+                                                </div>
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                                <button type="button" class="btn btn-primary">Insert</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                        
                                 </div>
                                 <div class="card-body table-full-width table-responsive">
                                     <table class="table table-hover table-striped">
@@ -160,10 +198,10 @@
                                         <tbody>
                                             <tr>
                                                 <td>{{host.hostname}}</td>
-                                                <td>Minerva Hooper</td>
-                                                <td>$23,789</td>
-                                                <td>Curaçao</td>
-                                                <td>Sinaai-Waas</td>
+                                                <td>{{host.ip}}</td>
+                                                <td>{{host.cpu_name}}</td>
+                                                <td>{{host.os}}</td>
+                                                <td>{{host.memory}}</td>
                                             </tr>
                                             <tr>
                                                 <td>3</td>
@@ -334,5 +372,7 @@
 <script src="{% static 'js/light-bootstrap-dashboard.js' %}" type="text/javascript"></script>
 <!-- Light Bootstrap Dashboard DEMO methods, don't include it in your project! -->
 <script src="{% static 'js/demo.js' %}"></script>
+
+
 
 </html>
