--- a/templates/host_list.html
+++ b/templates/host_list.html
@@ -12,8 +12,8 @@
 =========================================================
 
  The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.  -->
- {% load static %}
- <!DOCTYPE html>
+{% load static %}
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -22,7 +22,8 @@
     <link rel="icon" type="image/png" href="{% static 'img/favicon.ico' %}">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <title>Lab Manager</title>
-    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
+    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no'
+        name='viewport' />
     <!--     Fonts and icons     -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
@@ -43,31 +44,31 @@
     -->
             <div class="sidebar-wrapper">
                 <div class="logo">
-                    <a href="./dashboard.html" class="simple-text">
-                        Lab_Manager 
+                    <a href="show_dashboard" class="simple-text">
+                        Lab_Manager
                     </a>
                 </div>
                 <ul class="nav">
                     {% if request.path_info == '/server/show_dashboard' %}
-                        <li class="nav-item active">
-                    {% else %}
-                        <li>
-                    {% endif %}
-                            <a class="nav-link" href="show_dashboard">
+                    <li class="nav-item active">
+                        {% else %}
+                    <li>
+                        {% endif %}
+                        <a class="nav-link" href="show_dashboard">
                             <i class="nc-icon nc-chart-pie-35"></i>
                             <p>Dashboard</p>
-                            </a>
-                        </li>
+                        </a>
+                    </li>
                     {% if request.path_info == '/server/show_hosts' %}
-                        <li class="nav-item active">
-                    {% else %}
-                        <li>
-                    {% endif %}
-                            <a class="nav-link" href="show_hosts">
+                    <li class="nav-item active">
+                        {% else %}
+                    <li>
+                        {% endif %}
+                        <a class="nav-link" href="show_hosts">
                             <i class="nc-icon nc-circle-09"></i>
                             <p>Host List</p>
-                            </a>
-                        </li>                   
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -76,7 +77,8 @@
             <nav class="navbar navbar-expand-lg " color-on-scroll="500">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="#pablo"> Host List </a>
-                    <button href="" class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
+                    <button href="" class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+                        aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-bar burger-lines"></span>
                         <span class="navbar-toggler-bar burger-lines"></span>
                         <span class="navbar-toggler-bar burger-lines"></span>
@@ -145,92 +147,112 @@
                         <div class="col-md-12">
                             <div class="card strpied-tabled-with-hover">
                                 <div class="card-header ">
-                                    <h4 class="card-title">Striped Table with Hover</h4>
+                                    <h4 class="card-title"></h4>
                                     <!-- <p class="card-category">Here is a subtitle for this table</p> -->
                                     <!-- Button trigger modal -->
-                                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                                    <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                                        data-bs-target="#staticBackdrop" >
                                         Add Host
-                                        </button>
+                                    </button>
                                     <!-- Modal -->
-                                    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                                    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static"
+                                        data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel"
+                                        aria-hidden="true">
                                         <div class="modal-dialog">
-                                            <div class="modal-content">
-                                                 <div class="modal-header">
-                                                 <h5 class="modal-title" id="staticBackdropLabel">Insert Host</h5>
-                                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                                 </div>
-                                            <div class="modal-body">
-                                                <div class="mb-3">
-                                                    <label for="exampleFormControlInput1" class="form-label">New Host IP</label>
-                                                    <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="10.238.152.*">
+                                            <form action="add_host" method="post">
+                                                <div class="modal-content">
+                                                    <div class="modal-header">
+                                                        <h5 class="modal-title" id="staticBackdropLabel">Insert Host
+                                                        </h5>
+                                                        <!-- <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                            aria-label="Close"></button> -->
+                                                    </div>
+                                                    <div class="modal-body">
+                                                        <div class="mb-3">
+                                                            <label for="add_host_ip" class="form-label">
+                                                                Host IP</label>
+                                                            <input type="text" class="form-control" id="add_host_ip"
+                                                                name="add_host_ip" placeholder="10.238.152.*" required>
+                                                        </div>
+                                                        <div class="mb-3">
+                                                            <label for="add_host_port" class="form-label">
+                                                                PORT</label>
+                                                            <input type="text" class="form-control" id="add_host_port"
+                                                                name="add_host_port" placeholder="22" required>
+                                                        </div>
+                                                        <div class="mb-3">
+                                                            <label for="add_host_username" class="form-label">
+                                                                USERNAME</label>
+                                                            <input type="text" class="form-control"
+                                                                id="add_host_username" name="add_host_username"
+                                                                placeholder="root" required>
+                                                        </div>
+                                                        <div class="mb-3">
+                                                            <label for="add_host_password" class="form-label">
+                                                                PASSWORD</label>
+                                                            <input type="text" class="form-control"
+                                                                id="add_host_password" name="add_host_password"
+                                                                required>
+                                                        </div>
+                                                        <div class="mb-3">
+                                                            <label for="add_host_owner" class="form-label">
+                                                                Host Owner</label>
+                                                            <input type="text" class="form-control" id="add_host_owner"
+                                                                name="add_host_owner">
+                                                        </div>
+                                                        <div class="mb-3">
+                                                            <label for="add_host_which_lab" class="form-label">Which
+                                                                Lab</label>
+                                                            <select class="form-control" aria-label="add_host_which_lab"
+                                                                name="add_host_which_lab">
+                                                                <option selected value="">Open this select menu</option>
+                                                                <option value="18L01">18L01</option>
+                                                                <option value="18L03">18L03</option>
+                                                                <option value="18L06">18L06</option>
+                                                            </select>
+                                                        </div>
+                                                    </div>
+                                                    <div class="modal-footer">
+                                                        <button type="button" class="btn btn-secondary"
+                                                            data-bs-dismiss="modal">Close</button>
+                                                        <button type="submit" class="btn btn-primary">Insert</button>
+                                                    </div>
                                                 </div>
-                                                <div class="mb-3">
-                                                    <label for="exampleFormControlInput2" class="form-label">New Host Owner</label>
-                                                    <input type="text" class="form-control" id="exampleFormControlInput2">
-                                                </div>
-                                                <div class="mb-3">
-                                                    <label for="exampleSelectList" class="form-label">Which Lab</label>
-                                                    <select class="form-control" aria-label="exampleSelectList">
-                                                        <option selected>Open this select menu</option>
-                                                        <option value="18L01">18L01</option>
-                                                        <option value="18L03">18L03</option>
-                                                        <option value="18L06">18L06</option>
-                                                        </select>
-                                                </div>
-                                            </div>
-                                            <div class="modal-footer">
-                                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                                <button type="button" class="btn btn-primary">Insert</button>
-                                            </div>
+                                            </form>
                                         </div>
                                     </div>
-                        
                                 </div>
                                 <div class="card-body table-full-width table-responsive">
-                                    <table class="table table-hover table-striped">
+                                    <table class="table table-hover table-striped" style="font-size:13px;">
                                         <thead>
                                             <th>Hostname</th>
                                             <th>IP</th>
                                             <th>CPU</th>
-                                            <th>Which Lab</th>
+                                            <th>OS</th>
+                                            <th>Memory</th>
                                             <th>Owner</th>
+                                            <th>Which Lab</th>
                                         </thead>
                                         <tbody>
+                                            {% for host in host_list %}
                                             <tr>
                                                 <td>{{host.hostname}}</td>
                                                 <td>{{host.ip}}</td>
                                                 <td>{{host.cpu_name}}</td>
                                                 <td>{{host.os}}</td>
                                                 <td>{{host.memory}}</td>
+                                                {% if host.owner == "" %}
+                                                <td>--------</td>
+                                                {% else %}
+                                                <td>{{host.owner}}</td>
+                                                {% endif %}
+                                                {% if host.lab_name == "" %}
+                                                <td>--------</td>
+                                                {% else %}
+                                                <td>{{host.lab_name}}</td>
+                                                {% endif %}
                                             </tr>
-                                            <tr>
-                                                <td>3</td>
-                                                <td>Sage Rodriguez</td>
-                                                <td>$56,142</td>
-                                                <td>Netherlands</td>
-                                                <td>Baileux</td>
-                                            </tr>
-                                            <tr>
-                                                <td>4</td>
-                                                <td>Philip Chaney</td>
-                                                <td>$38,735</td>
-                                                <td>Korea, South</td>
-                                                <td>Overland Park</td>
-                                            </tr>
-                                            <tr>
-                                                <td>5</td>
-                                                <td>Doris Greene</td>
-                                                <td>$63,542</td>
-                                                <td>Malawi</td>
-                                                <td>Feldkirchen in Kärnten</td>
-                                            </tr>
-                                            <tr>
-                                                <td>6</td>
-                                                <td>Mason Porter</td>
-                                                <td>$78,615</td>
-                                                <td>Chile</td>
-                                                <td>Gloucester</td>
-                                            </tr>
+                                            {% endfor %}
                                         </tbody>
                                     </table>
                                 </div>
@@ -269,7 +291,7 @@
                             <script>
                                 document.write(new Date().getFullYear())
                             </script>
-                            <!-- <a href="http://www.creative-tim.com">Creative Tim</a> -->  made with the Puny God!
+                            <!-- <a href="http://www.creative-tim.com">Creative Tim</a> --> made with the Puny God!
                         </p>
                     </nav>
                 </div>
@@ -372,7 +394,6 @@
 <script src="{% static 'js/light-bootstrap-dashboard.js' %}" type="text/javascript"></script>
 <!-- Light Bootstrap Dashboard DEMO methods, don't include it in your project! -->
 <script src="{% static 'js/demo.js' %}"></script>
-
 
 
 </html>
