--- a/templates/host_list.html
+++ b/templates/host_list.html
@@ -236,7 +236,7 @@
                                         <tbody>
                                             {% for host in host_list %}
                                             <tr>
-                                                <td>{{host.hostname}}</td>
+                                                <td><a href="show_host_detail?id={{host.id}}">{{host.hostname}}</a></td>
                                                 <td>{{host.ip}}</td>
                                                 <td>{{host.cpu_name}}</td>
                                                 <td>{{host.os}}</td>
